Non virtual-threads Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo-concurrency-control
+
+# System-level concurrency controls
+app.concurrent.processing.system-max-threads=20
+app.concurrent.processing.system-core-threads=10
+app.concurrent.processing.queue-capacity=100
+app.concurrent.processing.thread-keep-alive-seconds=60
+
+# Request-level concurrency controls
+app.concurrent.processing.max-concurrent-groups-per-request=5
+app.concurrent.processing.permit-acquisition-timeout-seconds=30
+app.concurrent.processing.request-timeout-seconds=300
