Virtual Threads Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=demo-concurrency-control
 
+spring.threads.virtual.enabled=true
+
 # System-level concurrency controls
+app.concurrent.processing.use-virtual-threads=true
+
 app.concurrent.processing.system-max-threads=20
 app.concurrent.processing.system-core-threads=10
 app.concurrent.processing.queue-capacity=100
