Allow partial success if some lines fail and some succeed
Note: This does not support partial success of lines a Group.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ app.concurrent.processing.thread-keep-alive-seconds=60
 app.concurrent.processing.max-concurrent-groups-per-request=5
 app.concurrent.processing.permit-acquisition-timeout-seconds=30
 app.concurrent.processing.request-timeout-seconds=300
+
+# Actuator endpoints for monitoring
+management.endpoints.web.exposure.include=health,metrics,info,prometheus
+management.metrics.export.prometheus.enabled=true
+management.metrics.tags.application=${spring.application.name}
+
+# Jackson configuration for JSON serialization
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.write-dates-as-timestamps=false
